--- a/cn/index.html
+++ b/cn/index.html
@@ -65,12 +65,7 @@
         <div class="function-item-text">做题历史</div>
       </div>
     </div>
-    <div class="function-item" onclick="showSummary()">
-      <svg class="function-item-icon" viewBox="0 0 24 24" fill="#30B0C7">
-        <path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/>
-      </svg>
-      <div class="function-item-text">做题历史</div>
-    </div>
+
   </div>
 
   <!-- 容器：分类卡片 -->
@@ -235,8 +230,8 @@
   <div id="car-surrounding-container" class="ios-card">
     <div class="ios-card-content">
       <h2>
-        <svg class="car-icon" viewBox="0 0 24 24" fill="#007aff"><path d="M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.5 16c-.83 0-1.5-.67-1.5-1.5S5.67 13 6.5 13s1.5.67 1.5 1.5S7.33 16 6.5 16zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM5 11l1.5-4.5h11L19 11H5z"/></svg>
-        汽车周边
+        <img src="https://raw.githubusercontent.com/yzsnstotz/drivequiz-experiment/refs/heads/main/image/banner/046f6f3d-45d4-4424-97ec-1a07482a25c1.webp" alt="汽车周边" class="campus-life-banner" style="width: 100%; height: 120px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
+        <span>汽车周边</span>
       </h2>
       <div class="car-category-list" id="car-surrounding-list">
         <!-- 商家列表骨架屏 -->
