--- a/cn/index.html
+++ b/cn/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- 启动页面 -->
   <div id="splash-screen" class="splash-screen">
-    <img src="https://raw.githubusercontent.com/yzsnstotz/drivequiz-experiment/refs/heads/main/image/banner/cefe5736-7d0e-4378-ac6e-78492b3efc15.webp" alt="启动页面" class="splash-image">
+    <img src="./src/images/startScreen.webp" alt="启动页面" class="splash-image">
   </div>
 
   <!-- 主要内容容器 -->
@@ -214,7 +214,7 @@
   <div id="campus-life-container" class="ios-card">
     <div class="ios-card-content">
       <h2>
-        <img src="https://raw.githubusercontent.com/yzsnstotz/drivequiz-experiment/refs/heads/main/image/banner/DALL%C2%B7E%202025-01-20%2004.59.11%20-%20A%20banner%20for%20a%20Japanese%20driving%20exam%20app%2C%20combining%20traditional%20and%20modern%20elements.%20Include%20cultural%20symbols%20like%20cherry%20blossoms%2C%20Mount%20Fuji%2C%20and%20tr.webp" alt="合宿生活" class="campus-life-banner" style="width: 100%; height: 120px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
+        <img src="./src/images/drivingSchoolJourney.webp" alt="合宿生活" class="campus-life-banner" style="width: 100%; height: 120px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
         <span>合宿生活</span>
       </h2>
       <div class="life-category-list" id="campus-life-list">
@@ -230,7 +230,7 @@
   <div id="car-surrounding-container" class="ios-card">
     <div class="ios-card-content">
       <h2>
-        <img src="https://raw.githubusercontent.com/yzsnstotz/drivequiz-experiment/refs/heads/main/image/banner/046f6f3d-45d4-4424-97ec-1a07482a25c1.webp" alt="汽车周边" class="campus-life-banner" style="width: 100%; height: 120px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
+        <img src="./src/images/carService.webp" alt="汽车周边" class="campus-life-banner" style="width: 100%; height: 120px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
         <span>汽车周边</span>
       </h2>
       <div class="car-category-list" id="car-surrounding-list">
