--- a/cn/index.html
+++ b/cn/index.html
@@ -20,7 +20,6 @@
     <div class="ios-header">
       <div class="ios-header-title">ZALEM.APP</div>
       <div class="search-bar">
-        <svg class="search-icon" viewBox="0 0 24 24" fill="#666"><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>
         <input type="text" placeholder="搜索考题或服务" />
       </div>
     </div>
@@ -140,9 +139,8 @@
   <!-- 考试结果容器 -->
   <div id="result-container" class="ios-card">
     <div class="ios-card-content">
-      <div class="result-header">
-        <svg class="result-icon" viewBox="0 0 24 24" fill="#007AFF"><path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg>
-        <h2>考试结束</h2>
+      <div class="result-banner">
+        <img src="./src/images/quizResult.webp" alt="考试结果" class="result-banner-img">
       </div>
       <div class="result-content">
         <div class="result-item">
@@ -184,20 +182,72 @@
   </div>
 
   <!-- 错题复习容器（模式） -->
-  <div id="mistake-review-container" class="ios-card"></div>
-
-  <!-- 我的收藏容器 -->
-  <div id="favorites-container" class="ios-card">
-    <div class="ios-card-content">
-      <h2>我的收藏</h2>
-      <div id="favorites-count"></div>
-      <div style="text-align:center;">
-        <button onclick="startFavoritesQuiz()">开始收藏题测试</button>
-        <button onclick="resetQuiz()">返回首页</button>
+  <div id="mistake-review-container" class="mobile-container">
+    <div class="page-header">
+      <div class="nav-bar">
+        <button class="back-button" onclick="resetQuiz()">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M15 18l-6-6 6-6" />
+          </svg>
+        </button>
       </div>
-      <div id="favorites-list"></div>
+      <h2>
+        <img src="./src/images/mistakes.webp" alt="错题复习" class="campus-life-banner" style="width: 100%; height: 120px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
+        <span>错题复习</span>
+        <button class="targeted-test-btn" onclick="startMistakeQuiz()" style="float: right; background-color: #007AFF; color: white; border: none; border-radius: 15px; padding: 5px 12px; font-size: 14px;">开始练习</button>
+      </h2>
+      <div class="search-wrapper">
+        <div class="search-input-wrapper">
+          <svg class="search-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <circle cx="11" cy="11" r="8"></circle>
+            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+          </svg>
+          <input type="text" 
+                 id="mistakes-search" 
+                 class="search-input" 
+                 placeholder="搜索错题..." />
+        </div>
+      </div>
+    </div>
+
+    <div id="mistakes-list" class="mistakes-list">
+      <!-- 错题将在这里动态渲染 -->
     </div>
   </div>
+
+  <!-- 我的收藏容器 -->
+  <div id="favorites-container" class="mobile-container">
+    <div class="page-header">
+        <div class="nav-bar">
+            <button class="back-button" onclick="resetQuiz()">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M15 18l-6-6 6-6" />
+                </svg>
+            </button>
+        </div>
+        <h2>
+          <img src="./src/images/favorites.webp" alt="我的收藏" class="campus-life-banner" style="width: 100%; height: 120px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
+          <span>我的收藏</span>
+          <button class="targeted-test-btn" onclick="startFavoritesQuiz()" style="float: right; background-color: #007AFF; color: white; border: none; border-radius: 15px; padding: 5px 12px; font-size: 14px;">针对性测试</button>
+        </h2>
+        <div class="search-wrapper">
+            <div class="search-input-wrapper">
+                <svg class="search-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <circle cx="11" cy="11" r="8"></circle>
+                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                </svg>
+                <input type="text" 
+                       id="favorites-search" 
+                       class="search-input" 
+                       placeholder="搜索收藏题目..." />
+            </div>
+        </div>
+    </div>
+
+    <div id="favorites-list" class="favorites-list">
+        <!-- 收藏题目将在这里动态渲染 -->
+    </div>
+</div>
 
   <!-- 汇总表现（做题历史） -->
   <div id="summary-container" class="ios-card">
