launch CN beta new version

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   // 自动识别路径并记录语言属性
   const languageMap = {
     '/jp': 'Japanese',
-    '/cn': 'Chinese',
+    '/cn/beta': 'Chinese',
     '/en': 'English',
     '/vn': 'Vietnamese',
     '/kr': 'Korean'
