--- a/cn/index.html
+++ b/cn/index.html
@@ -5,7 +5,7 @@
   <script src="index.js"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>驾考练习 - iOS风格</title>
+  <title>ZALEM.APP - 驾考练习</title>
 </head>
 
 <body>
@@ -96,6 +96,12 @@
   <div class="ios-card-content">
     <!-- 大乱斗顶部状态条 -->
     <div id="battle-header" style="display:none;">
+      <div class="battle-banner">
+        <img src="src/images/battlemode.webp" alt="Battle Mode Banner" class="battle-banner-img">
+      </div>
+    </div>
+    <!-- 大乱斗信息区域 -->
+    <div class="battle-info-container" style="display:none;">
       <span id="battle-score">得分: 0</span>
       <span id="battle-lives">生命值: ❤️❤️❤️❤️❤️</span>
       <span id="battle-timer">时间: 20s</span>
