更新子页面到相对目录
更新子页面到相对目录

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
     <div class="slogan">足利自動車学校へようこそ！</div>
     <div class="language-buttons">
       <!-- 添加点击事件统计 -->
-      <a href="/jp" class="language-btn jp" onclick="trackLanguageSelection('Japanese')">日本語</a>
-      <a href="/cn/beta" class="language-btn cn" onclick="trackLanguageSelection('Chinese')">中文</a>
-      <a href="/en" class="language-btn en" onclick="trackLanguageSelection('English')">English</a>
-      <a href="/vn" class="language-btn vn" onclick="trackLanguageSelection('Vietnamese')">Tiếng Việt</a>
-      <a href="/kr" class="language-btn kr" onclick="trackLanguageSelection('Korean')">한국어</a>
+      <a href="./jp" class="language-btn jp" onclick="trackLanguageSelection('Japanese')">日本語</a>
+      <a href="./cn/beta" class="language-btn cn" onclick="trackLanguageSelection('Chinese')">中文</a>
+      <a href="./en" class="language-btn en" onclick="trackLanguageSelection('English')">English</a>
+      <a href="./vn" class="language-btn vn" onclick="trackLanguageSelection('Vietnamese')">Tiếng Việt</a>
+      <a href="./kr" class="language-btn kr" onclick="trackLanguageSelection('Korean')">한국어</a>
     </div>
   </div>
 </body>
