--- a/index.html
+++ b/index.html
@@ -1,153 +1,62 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Zalem - 多语言选择</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-    }
-    .container {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-    }
-    .brand-image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
-    .language-buttons {
-      position: absolute;
-      bottom: 15%;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      align-items: center;
-    }
-    .language-btn {
-      width: 180px;
-      padding: 15px 0;
-      font-size: 16px;
-      color: #fff;
-      background: linear-gradient(145deg, #007BFF, #0056b3);
-      border: none;
-      border-radius: 25px;
-      text-align: center;
-      text-decoration: none;
-      cursor: pointer;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-    .language-btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-    }
-    .language-btn.jp {
-      background: linear-gradient(145deg, #ff6f61, #e0554a);
-    }
-    .language-btn.cn {
-      background: linear-gradient(145deg, #4caf50, #388e3c);
-      position: relative;
-    }
-    .language-btn.cn::after {
-      content: 'Beta';
-      position: absolute;
-      top: -10px;
-      right: -10px;
-      background: #ff4081;
-      color: white;
-      padding: 2px 6px;
-      border-radius: 10px;
-      font-size: 12px;
-      font-weight: bold;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-    }
-    .language-btn.en {
-      background: linear-gradient(145deg, #2196f3, #1976d2);
-    }
-    .language-btn.vn {
-      background: linear-gradient(145deg, #ff9800, #e68900);
-    }
-    .language-btn.kr {
-      background: linear-gradient(145deg, #9c27b0, #7b1fa2);
-    }
-    .slogan {
-      position: absolute;
-      top: 10%;
-      left: 50%;
-      transform: translateX(-50%);
-      color: white;
-      font-size: 24px;
-      font-weight: bold;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-      background-color: rgba(0, 0, 0, 0.4);
-      padding: 10px 20px;
-      border-radius: 15px;
-      z-index: 1;
-    }
+    body{font-family:Arial, sans-serif;margin:0;padding:0;background:#f4f4f4;display:flex;flex-direction:column;justify-content:center;align-items:center;height:100vh;overflow:hidden}
+    .container{position:relative;width:100%;height:100%;text-align:center}
+    .brand-image{width:100%;height:100%;object-fit:cover;position:absolute;top:0;left:0;z-index:-1}
+    .language-buttons{position:absolute;bottom:15%;left:50%;transform:translateX(-50%);display:flex;flex-direction:column;gap:15px;align-items:center}
+    .language-btn{width:180px;padding:15px 0;font-size:16px;color:#fff;background:linear-gradient(145deg,#007BFF,#0056b3);border:none;border-radius:25px;text-align:center;text-decoration:none;cursor:pointer;box-shadow:0 4px 6px rgba(0,0,0,.1);transition:transform .2s ease, box-shadow .2s ease}
+    .language-btn:hover{transform:translateY(-3px);box-shadow:0 6px 12px rgba(0,0,0,.2)}
+    .language-btn.jp{background:linear-gradient(145deg,#ff6f61,#e0554a)}
+    .language-btn.cn{background:linear-gradient(145deg,#4caf50,#388e3c);position:relative}
+    .language-btn.cn::after{content:'Beta';position:absolute;top:-10px;right:-10px;background:#ff4081;color:#fff;padding:2px 6px;border-radius:10px;font-size:12px;font-weight:bold;box-shadow:0 2px 4px rgba(0,0,0,.2)}
+    .language-btn.en{background:linear-gradient(145deg,#2196f3,#1976d2)}
+    .language-btn.vn{background:linear-gradient(145deg,#ff9800,#e68900)}
+    .language-btn.kr{background:linear-gradient(145deg,#9c27b0,#7b1fa2)}
+    .slogan{position:absolute;top:10%;left:50%;transform:translateX(-50%);color:#fff;font-size:24px;font-weight:bold;text-shadow:2px 2px 5px rgba(0,0,0,.7);background:rgba(0,0,0,.4);padding:10px 20px;border-radius:15px;z-index:1}
   </style>
 
-<!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ER1N8KVZPZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ER1N8KVZPZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  // 自动识别路径并记录语言属性
-  const languageMap = {
-    '/jp': 'Japanese',
-    '/cn': 'Chinese',
-    '/en': 'English',
-    '/vn': 'Vietnamese',
-    '/kr': 'Korean'
-  };
-  const currentPath = window.location.pathname;
-  const currentLanguage = languageMap[currentPath] || 'Unknown';
+    // === 关键修复：剥离项目子路径后再识别语言 ===
+    const projectBase = '/drivequiz-experiment';
+    const fullPath = window.location.pathname;
+    const pathWithoutBase = fullPath.startsWith(projectBase)
+      ? fullPath.slice(projectBase.length)
+      : fullPath;
 
-  // 配置页面路径
-  gtag('config', 'G-ER1N8KVZPZ', {
-    'page_path': currentPath
-  });
+    // pathWithoutBase 形如："/jp"、"/cn/beta"、"/"
+    const firstSeg = pathWithoutBase.split('/').filter(Boolean)[0] || '';
+    const languageMap = { jp: 'Japanese', cn: 'Chinese', en: 'English', vn: 'Vietnamese', kr: 'Korean' };
+    const currentLanguage = languageMap[firstSeg] || 'Unknown';
 
-  // 自定义事件记录语言属性
-  gtag('event', 'set_language', {
-    'event_category': 'Language',
-    'event_label': currentLanguage,
-    'value': 1
-  });
-</script>
-
+    gtag('config', 'G-ER1N8KVZPZ', { 'page_path': fullPath });
+    function trackLanguageSelection(lang) {
+      gtag('event', 'select_language', { event_category: 'Language', event_label: lang, value: 1 });
+    }
+  </script>
 </head>
 <body>
   <div class="container">
     <img src="https://github.com/yzsnstotz/drivequiz/blob/main/WechatIMG15.jpg?raw=true" alt="Zalem Brand" class="brand-image">
     <div class="slogan">足利自動車学校へようこそ！</div>
+
     <div class="language-buttons">
-      <!-- 添加点击事件统计 -->
-      <a href="./jp" class="language-btn jp" onclick="trackLanguageSelection('Japanese')">日本語</a>
-      <a href="./cn/beta" class="language-btn cn" onclick="trackLanguageSelection('Chinese')">中文</a>
-      <a href="./en" class="language-btn en" onclick="trackLanguageSelection('English')">English</a>
-      <a href="./vn" class="language-btn vn" onclick="trackLanguageSelection('Vietnamese')">Tiếng Việt</a>
-      <a href="./kr" class="language-btn kr" onclick="trackLanguageSelection('Korean')">한국어</a>
+      <!-- 关键修复：相对路径（以 ./ 开头），并加尾部斜杠便于加载目录下 index.html -->
+      <a href="./jp/" class="language-btn jp" onclick="trackLanguageSelection('Japanese')">日本語</a>
+      <a href="./cn/beta/" class="language-btn cn" onclick="trackLanguageSelection('Chinese')">中文</a>
+      <a href="./en/" class="language-btn en" onclick="trackLanguageSelection('English')">English</a>
+      <a href="./vn/" class="language-btn vn" onclick="trackLanguageSelection('Vietnamese')">Tiếng Việt</a>
+      <a href="./kr/" class="language-btn kr" onclick="trackLanguageSelection('Korean')">한국어</a>
     </div>
   </div>
 </body>
